examples/test/testpolicy18204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18204
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key37: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value39
          key15: value31
          key43: value28
      podSelector:
        matchLabels:
          key20: value17
          key2: value9
          key48: value33
